--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "format": "prettier —write .",
-        "lint:js": "eslint ./src/**/*.js"
+        "lint:js": "eslint ./src/**/*.js",
+        "lint:css": "stylelint ./css/*.css",
+        "prepare": "husky install",
+        "lint": "npm run lint:js && npm run lint:css"
     },
     "author": "",
     "license": "ISC",
@@ -14,8 +17,12 @@
         "eslint": "^8.44.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.3",
         "install": "^0.13.0",
         "npm": "^9.8.0",
-        "prettier": "^3.0.0"
+        "prettier": "^3.0.0",
+        "stylelint": "^15.10.1",
+        "stylelint-config-standard": "^34.0.0",
+        "stylelint-prettier": "^3.0.0"
     }
 }
