--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -1,1 +1,7 @@
 extends: ['stylelint-config-standard', 'stylelint-prettier/recommended']
+rules:
+    {
+        'selector-class-pattern': null,
+        'block-no-empty': null,
+        'font-family-no-missing-generic-family-keyword': null,
+    }
