--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "format": "prettier —write .",
         "lint:js": "eslint ./src/**/*.js",
-        "lint:css": "stylelint ./css/*.css",
+        "lint:css": "stylelint ./css/*.css --fix",
         "prepare": "husky install",
         "lint": "npm run lint:js && npm run lint:css"
     },
