Correct package.json in prettier

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "format": "prettier —write .",
+        "format": "prettier --write .",
         "lint:js": "eslint ./src/**/*.js",
         "lint:css": "stylelint ./css/*.css --fix",
         "prepare": "husky install",
