--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "devDependencies": {
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
+        "css-minimizer-webpack-plugin": "^5.0.1",
         "eslint": "^8.44.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "html-webpack-plugin": "^5.5.3",
         "husky": "^8.0.3",
         "install": "^0.13.0",
+        "mini-css-extract-plugin": "^2.7.6",
         "npm": "^9.8.0",
         "prettier": "^2.8.8",
         "style-loader": "^3.3.3",
